assets/css/style.css
/* ... */
.project-img img {
	width: 100%;
	height: 100%;
	max-width: 500px;
	object-fit: cover;
	transition: transform 0.4s ease;
}

.project-img {
	overflow: hidden;
	flex-shrink: 0;
}

.project-img:hover img {
	transform: scale(1.08);
}

.project-about {
	padding: 30px 25px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	background-image: linear-gradient(
		135deg,
		rgb(54, 209, 220) 0%,
		rgb(91, 134, 229) 100%
	);
	color: #ffffff;
}

.project-about h3 {
	font-size: 1.8rem;
	margin-bottom: 10px;
	color: #2d3748;
	color: #ffffff;
}

.project-about p {
	margin-bottom: 16px;
	color: #4a5568;
	line-height: 1.6;
	font-size: 0.95rem;
	color: #ffffff;
}

.project-details {
	font-style: italic;
}

.tech-stack {
	display: flex;
	flex-wrap: wrap;
	gap: 10px;
	margin: 16px 0;
}

.tech-tag {
	background: linear-gradient(to right, #000000, #00000087);
	color: #ffffff;
	padding: 6px 14px;
	border-radius: 20px;
	font-size: 0.8rem;
	font-weight: 600;
}

.card-actions {
	display: flex;
	justify-content: right;
}

.btn {
	position: relative;
	display: inline-block;
	padding: 4px 30px !important;
	border-radius: 0 !important;
	text-decoration: none !important;
	color: #ffffff !important;
	border: solid #ffffff 2px !important;
	background-color: transparent !important;
	font-weight: bold !important;
	overflow: hidden;
	transition: color 0.4s ease-out !important;
	font-size: 0.8rem;
}

.btn::before {
	content: "";
	position: absolute;
	top: 0;
	left: -100%;
	width: 100%;
	height: 100%;
	background-color: #ffffff;
	z-index: 0; /* background layer */
	transition: left 0.4s ease-out;
}

.btn:hover::before {
	left: 0;
}

.btn:hover span {
	color: rgb(91, 134, 229) !important;
	/* color: #000000; */
}

/* Text layer */
.btn span {
	position: relative;
	z-index: 1;
}

@media screen and (max-width: 1000px) {
	.project-item {
		flex-direction: column;
	}

	.project-img img {
		max-width: 100%;
		height: auto;
	}
}

/*--------------------------------------------------------------
# Certificate
--------------------------------------------------------------*/
#certificates {
	background-color: #f7f8f9;
}

.certificates {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	gap: 20px;
	max-width: 1100px;
	margin: 40px auto;
}

.certificates a:hover {
	color: #fff;
}

.certificate {
	color: #fff;
	border-radius: 15px;
	padding: 20px;
	position: relative;
	overflow: hidden;
	display: flex;
	flex-direction: column;
	min-height: 180px;
	transition: transform 0.3s ease, box-shadow 0.3s ease;
	text-align: left;
	font-weight: bold;
	text-decoration: none;
}

.certificate.gold {
	background-image: linear-gradient(to right bottom, #c7a225, #ebda65);
}

.certificate.silver {
	background-image: linear-gradient(to right bottom, #949494, #eee);
}

.certificate:hover {
	transform: translateY(-6px);
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
}

.certificate p {
	font-size: 1.1rem;
	font-weight: 600;
	margin: 0;
}

.certificate small {
	font-size: 0.8rem;
	opacity: 0.9;
}

.certificate .decoration {
	position: absolute;
	bottom: 5px;
	right: 5px;
	width: 100px;
}

/*--------------------------------------------------------------
# Footer
--------------------------------------------------------------*/
footer {
	background: #111827;
	color: #ffffff;
	font-size: 14px;
	text-align: center;
	padding: 30px 0;
	display: flex;
	justify-content: center;
	align-items: center;
}

.contact {
	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 86vh;
}

footer h3 {
	font-size: 36px;
	font-weight: bold;
	font-family: "Poppins", sans-serif;
}

.contact-info {
	display: flex;
	gap: 20px;
}

.contact-info span {
	color: #61aaf9;
}

.social-icons {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 20px;
}

.social-items i {
	font-size: 2rem;
}

.social-items a {
	text-decoration: none;
	color: inherit;
}

@media screen and (max-width: 600px) {
	.contact-info {
		flex-direction: column;
		gap: 4px;
	}

	.contact-info p {
		margin: 0;
	}

	.social-icons {
		margin-top: 6px;
	}
}

